# python-maze-solver

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
maze_solver/: graphics.py  maze.py
tests/: point_tests.py
